fixed footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -141,10 +141,11 @@ footer {
     flex-direction: column;
     align-items: center;
     margin-top: auto;
+    justify-content: flex-end;
     /* position: relative;
     bottom: 0; */
     width: 100%;
-    height: 5em;
+    height: 3em;
     background-color: #f1faee;
 }
 
